--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     padding: 0;
     margin: 0;
     font-family: sans-serif;
+    display: flex;
+    justify-content: center;
   }
   #bmi {
     max-width: 100%;
