--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ body {
   }
   #bmi {
     max-width: 100%;
-    width: 100%;
+    width: 450px;
     position: relative;
-    height: 100vh;
+    height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
