--- a/style.css
+++ b/style.css
@@ -10,10 +10,13 @@ body {
     width: 450px;
     position: relative;
     height: 400px;
-    display: flex;
+    margin-top: 50px;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    padding:50px;
+    box-shadow: 0px 0px 20px 10px #e3e3e3;
+    background: #fafafa;
+    border-radius:38px;
   }
 
   .title {
