--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ body {
 
   .mb-20px {
     margin-bottom: 20px;
+    justify-content: center;
+    margin-bottom: 20px;
   }
 
   .mb-50px {
@@ -55,7 +57,7 @@ body {
   }
 
   button {
-    padding: 10px 15px 10px 15px;
+    padding: 15px 25px 15px 25px;
     background-color: #6558f5;
     border: none;
     border-radius: 5px;
