--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   }
 
   .mb-20px {
-    margin-bottom: 20px;
+    display: flex;
     justify-content: center;
     margin-bottom: 20px;
   }
